--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "@mapbox/mapbox-gl-draw": "^1.1.2",
+    "angular-ai-chat-bot": "^1.1.1",
     "mapbox-gl": "^1.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
