--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.1",
+    "@angular/cdk": "^8.0.0",
     "@angular/common": "~8.0.1",
     "@angular/compiler": "~8.0.1",
     "@angular/core": "~8.0.1",
@@ -20,7 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "@mapbox/mapbox-gl-draw": "^1.1.2",
-    "angular-ai-chat-bot": "^1.1.1",
+    "eva-icons": "^1.1.1",
     "mapbox-gl": "^1.4.1",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.4.0",
@@ -32,9 +33,10 @@
     "@angular/cli": "~8.0.3",
     "@angular/compiler-cli": "~8.0.1",
     "@angular/language-service": "~8.0.1",
-    "@types/node": "~8.9.4",
+    "@schematics/angular": "~8.0.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
