--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,23 +25,26 @@
     "@progress/kendo-angular-common": "^1.0.0",
     "@progress/kendo-angular-conversational-ui": "^2.0.0",
     "@progress/kendo-angular-dateinputs": "^4.0.0",
-    "@progress/kendo-angular-dialog": "^4.1.0",
+    "@progress/kendo-angular-dialog": "^4.0.0",
     "@progress/kendo-angular-dropdowns": "^4.0.0",
+    "@progress/kendo-angular-editor": "^0.10.2",
     "@progress/kendo-angular-excel-export": "^3.0.0",
     "@progress/kendo-angular-grid": "^4.4.0",
     "@progress/kendo-angular-inputs": "^6.0.0",
     "@progress/kendo-angular-intl": "^2.0.0",
     "@progress/kendo-angular-l10n": "^2.0.0",
+    "@progress/kendo-angular-layout": "^4.0.0",
     "@progress/kendo-angular-pdf-export": "^2.0.0",
     "@progress/kendo-angular-popup": "^3.0.0",
     "@progress/kendo-data-query": "^1.0.0",
-    "@progress/kendo-drawing": "^1.0.0",
+    "@progress/kendo-drawing": "^1.5.12",
     "@progress/kendo-theme-default": "latest",
     "mapbox-gl": "^1.4.1",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@progress/kendo-angular-toolbar": "^2.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
