--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,8 @@
     "@progress/kendo-angular-layout": "^4.0.0",
     "@progress/kendo-angular-pdf-export": "^2.0.0",
     "@progress/kendo-angular-popup": "^3.0.0",
+    "@progress/kendo-angular-toolbar": "^2.1.0",
+    "@progress/kendo-angular-upload": "^5.1.0",
     "@progress/kendo-data-query": "^1.0.0",
     "@progress/kendo-drawing": "^1.5.12",
     "@progress/kendo-theme-default": "latest",
@@ -43,8 +45,7 @@
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "@progress/kendo-angular-toolbar": "^2.1.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
