--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@kolkov/angular-editor": "^1.0.0-rc.0",
     "@mapbox/mapbox-gl-draw": "^1.1.2",
-    "@progress/kendo-angular-buttons": "^5.0.1",
-    "@progress/kendo-angular-common": "^1.1.4",
+    "@progress/kendo-angular-buttons": "^5.0.0",
+    "@progress/kendo-angular-common": "^1.0.0",
     "@progress/kendo-angular-conversational-ui": "^2.0.0",
     "@progress/kendo-angular-dateinputs": "^4.0.0",
     "@progress/kendo-angular-dialog": "^4.0.0",
@@ -34,7 +35,7 @@
     "@progress/kendo-angular-l10n": "^2.0.0",
     "@progress/kendo-angular-layout": "^4.0.0",
     "@progress/kendo-angular-pdf-export": "^2.0.0",
-    "@progress/kendo-angular-popup": "^3.0.3",
+    "@progress/kendo-angular-popup": "^3.0.0",
     "@progress/kendo-angular-toolbar": "^2.1.0",
     "@progress/kendo-angular-upload": "^5.1.0",
     "@progress/kendo-data-query": "^1.0.0",
